# hydra-sdks

./: .gitignore  LICENSE  README.md
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
docs/: GETTING_STARTED.md  INTEGRATION_GUIDE.md  api.md  example-checkout.html  payment-gateway-integration.md
dotnet/: HydraPayments.sln  README.md
examples/javascript/: index.html
examples/rust/: main.rs
go/: README.md  client.go  client_test.go  doc.go  go.mod  types.go
html/: README.md  hydra.js
ios/: .gitignore  Package.swift  README.md
java/: README.md  pom.xml
javascript/: README.md  package.json
mcp-server/: package-lock.json  package.json  tsconfig.json
node/: README.md  package.json
php/: README.md  composer.json  phpunit.xml.dist
python/: README.md  pyproject.toml
react-native/: README.md  package-lock.json  package.json  tsconfig.json
ruby/: Gemfile  README.md  hydra_payments.gemspec
rust/: Cargo.toml  README.md
rust/src/: client.rs  lib.rs  types.rs
shopify-hydra-integration/: .env.example  README.md  package.json  server.js
terraform/: README.md  client.go  data_source_account.go  data_source_accounts.go  data_source_commission.go  data_source_health.go  data_source_split_rule.go  data_source_transaction.go  data_source_wallets.go  go.mod  main.go  provider.go  resource_account.go  resource_payment_gateway.go  resource_split_rule.go  resource_transaction.go  resource_wallet.go
typescript/: README.md  package-lock.json  package.json  tsconfig.json
wp-hydra-payment/: LICENSE  README.md  wp-hydra-payment.php
(+133 files in other folders)
