[package]
name = "hydra-sdk"
version = "0.1.0"
edition = "2021"
description = "Hydra payments SDK for Rust"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
