[package]
name = "hydra-sdk"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for Hydra Payment Service"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
native-tls = ["reqwest/native-tls"]

[package.metadata.docs.rs]
all-features = true